# cliq

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  basic.cpp  command_app.cpp  command_list_app.cpp  commands.cpp
ext/: CMakeLists.txt
lab/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/cliq/: app.hpp  app_info.hpp  arg.hpp  assignment.hpp  binding.hpp  binding_old.hpp  command.hpp  concepts.hpp  parse.hpp  parse_result.hpp  polymorphic.hpp  result.hpp  result_old.hpp
lib/include/cliqr/: binding.hpp  command.hpp  instance.hpp  polymorphic.hpp  result.hpp
lib/src/: arg.cpp  build_version.hpp.in  cliq.cpp  cliqr.cpp  config.cmake.in  parse.cpp  parser.cpp  parser.hpp  parser_old.cpp  parser_old.hpp  printer.cpp  printer.hpp  scanner.hpp  storage.cpp  storage.hpp  token.hpp
tests/: CMakeLists.txt  test_basic.cpp  test_parser.cpp  test_parser2.cpp  test_parser_old.cpp  test_token.cpp
